# movy

./: .gitignore  Cargo.toml  Dockerfile  Readme.md
.github/workflow/: docker.yaml
.github/workflows/: docker.yaml  release.yaml  test.yaml
crates/movy/: Cargo.toml
crates/movy-analysis/: Cargo.toml
crates/movy-analysis/src/: call_graph.rs  export_call_graph.rs  export_package_structure.rs  lib.rs  type_graph.rs
crates/movy-aptos/: Cargo.toml
crates/movy-aptos/examples/: simple_test.rs
crates/movy-aptos/src/: aptos_custom_state.rs  exec_aptos.rs  feedback.rs  lib.rs  script_sequence.rs  test_executor.rs
crates/movy-aptos/tests/: test_executor.rs
crates/movy-fork-tests/: Cargo.toml  FORK_TESTS.md
crates/movy-fork-tests/src/: lib.rs
crates/movy-fork-tests/tests/: build_isolation.rs  misc.rs  smoke.rs  test_mode.rs  tracer_hooks.rs
crates/movy-fuzz/: Cargo.toml
crates/movy-fuzz/src/: executor.rs  flash.rs  lib.rs  meta.rs  sched.rs  solver.rs  state.rs  utils.rs
crates/movy-fuzz/src/mutators/: arg.rs  basic.rs  havoc.rs  mod.rs  mutation_utils.rs  object_data.rs  sequence.rs  utils.rs
crates/movy-fuzz/src/mutators/sequence/: append.rs  hooks.rs  post.rs  remap.rs
crates/movy-fuzz/src/operations/: fuzz.rs  mod.rs  sui_fuzz.rs  sui_replay.rs  sui_test.rs
crates/movy-fuzz/src/oracles/sui/: bool_judgement.rs  common.rs  infinite_loop.rs  mod.rs  overflow.rs  precision_loss.rs  proceeds.rs  type_conversion.rs  typed_bug.rs
crates/movy-replay/: Cargo.toml  build.rs
crates/movy-replay/hello_std/: Move.toml
crates/movy-replay/hello_std/sources/: hello_std.move
crates/movy-replay/hello_std/tests/: hello_std_tests.move
crates/movy-replay/src/: db.rs  env.rs  event.rs  exec.rs  lib.rs  meta.rs
crates/movy-replay/src/tracer/: concolic.rs  fuzz.rs  lcov.rs  mod.rs  op.rs  oracle.rs  tree.rs
crates/movy-static-analysis/: Cargo.toml
crates/movy-static-analysis/src/: lib.rs
crates/movy-static-analysis/src/sui/: bool_judgement.rs  common.rs  generate_bytecode.rs  infinite_loop.rs  mod.rs  precision_loss.rs  type_conversion.rs  unchecked_return.rs  unused_const.rs  unused_private_fun.rs  unused_struct.rs
crates/movy-sui/: Cargo.toml  schema.graphql
crates/movy-sui-stds/: Cargo.toml  build.rs
crates/movy-sui-stds/conflicting/: version
crates/movy-sui-stds/src/: lib.rs
crates/movy-sui/src/: compile.rs  lcov.rs  lib.rs  schema.rs  utils.rs
crates/movy-sui/src/database/: cache.rs  empty.rs  file.rs  graphql.rs  mod.rs
crates/movy-sui/src/rpc/: graphql.rs  grpc.rs
crates/movy-types/: Cargo.toml
crates/movy-types/src/: abi.rs  bytecode.rs  error.rs  input.rs  lib.rs  module.rs  object.rs  oracle.rs  test_report.rs
crates/movy/src/: main.rs
crates/movy/src/analysis/: call_graph.rs  export_call_graph.rs  export_repo_info.rs  mod.rs  type_graph.rs
crates/movy/src/sui/: deploy.rs  env.rs  fuzz.rs  fuzz_one.rs  mod.rs  prepare.rs  replay.rs  static_analysis.rs  test.rs  trace.rs  utils.rs
move/movy/: Move.toml
test-data/counter/: Move.toml
test-data/counter/sources/: counter.move
test-data/counter/tests/: movy.move
test-data/overflow_oracle/: Move.toml
test-data/overflow_oracle/sources/: overflow_oracle.move
